data/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>PD_MC_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PD MC #2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (PD MC #2)</relationshipLabel>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PD_MC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PD MC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (PD MC)</relationshipLabel>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PD_Salesperson_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PD Salesperson #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PD_Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PD Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Perf_Fee__c</fullName>
        <label>Perf Fee %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pre_PD_MC_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-PD MC #2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Pre-PD MC #2)</relationshipLabel>
        <relationshipName>Opportunities6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_PD_MC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-PD MC</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Pre-PD MC)</relationshipLabel>
        <relationshipName>Opportunities5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_PD_Meeting_Date__c</fullName>
        <label>Pre PD Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pre_PD_Salesperson_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre PD Salesperson #2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pre_PD_Salesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-PD Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Profile_Notes__c</fullName>
        <label>Profile Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposal_Delivery_Date__c</fullName>
        <label>Proposal Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Total_Gross_Savings_CALC__c</fullName>
        <label>Proposal Total Gross Savings CALC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Total_Gross_Savings__c</fullName>
        <defaultValue>(0)</defaultValue>
        <label>Proposal Total Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Total_Net_Savings_CALC__c</fullName>
        <label>Proposal Total Net Savings CALC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Total_Net_Savings__c</fullName>
        <defaultValue>(0)</defaultValue>
        <label>Proposal Total Net Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Push_to_D365__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push to D365</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QS_Gross_Savings__c</fullName>
        <label>QS Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QS_Months__c</fullName>
        <label>QS Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QS_Net_Savings__c</fullName>
        <label>QS Net Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QS_Type__c</fullName>
        <description>Previously QS Type</description>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quick Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Billing</fullName>
                </value>
                <value>
                    <fullName>Shorten Billing</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Renewal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Notes__c</fullName>
        <label>RFP Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RFP_Shipped_Date__c</fullName>
        <label>RFP Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFP_Stage__c</fullName>
        <label>RFP Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monitoring for Requirements Release</fullName>
                </value>
                <value>
                    <fullName>Requirements Received</fullName>
                </value>
                <value>
                    <fullName>Preparing Response</fullName>
                </value>
                <value>
                    <fullName>Shipped Response</fullName>
                </value>
                <value>
                    <fullName>Prospect Received Response</fullName>
                </value>
                <value>
                    <fullName>Won Bid</fullName>
                </value>
                <value>
                    <fullName>Lost Bid</fullName>
                </value>
                <value>
                    <fullName>Lost Bid, No Action</fullName>
                </value>
                <value>
                    <fullName>Lost, Competition</fullName>
                </value>
                <value>
                    <fullName>Withdrew Bid</fullName>
                </value>
                <value>
                    <fullName>Declined to Respond</fullName>
                </value>
                <value>
                    <fullName>RFP Response Rejected</fullName>
                </value>
                <value>
                    <fullName>Prospect Rescinded/Cancelled RFP</fullName>
                </value>
                <value>
                    <fullName>Awarded RFP, but No Signed Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RFP_Website__c</fullName>
        <label>RFP Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_End_Actuals__c</fullName>
        <label>Reporting Period End (Actuals)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_End_Budget__c</fullName>
        <label>Reporting Period End (Budget)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Start_Actuals__c</fullName>
        <label>Reporting Period Start (Actuals)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period_Start_Budget__c</fullName>
        <label>Reporting Period Start (Budget)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <label>Reporting Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Deadline__c</fullName>
        <label>Response Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Support_Notes__c</fullName>
        <label>Sales Support Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Savings_Percent__c</fullName>
        <label>Savings %</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>School_Enrollment__c</fullName>
        <label>School Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Senior_Pastor__c</fullName>
        <label>Senior Pastor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_Path_URL__c</fullName>
        <formula>HYPERLINK(
  &quot;https://cenergistic.sharepoint.com/sites/D365Sales/account/Forms/AllItems.aspx?id=&quot; &amp;
  /* Encode the server-relative path for the id= parameter (safe order, % first) */
  SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            SUBSTITUTE(
              &quot;/sites/D365Sales/account/&quot; &amp;
              Account.SharePoint_Path__c &amp;
              &quot;/opportunity/&quot; &amp;
              IF(
                AND(
                  ISBLANK(D365OpportunityGuid__c),
                  DATEVALUE(CreatedDate) &gt; DATE(2025, 3, 10)
                ),
                /* Use 15-char Id (NOT CASESAFEID) */
                Name &amp; &quot;_&quot; &amp; Id,
                Name &amp; &quot;_&quot; &amp; D365OpportunityGuid__c
              ),
              &quot;%&quot;, &quot;%25&quot;   /* encode % first */
            ),
            &quot; &quot;, &quot;%20&quot;
          ),
          &quot;&amp;&quot;, &quot;%26&quot;
        ),
        &quot;#&quot;, &quot;%23&quot;
      ),
      &quot;?&quot;, &quot;%3F&quot;
    ),
    &quot;+&quot;, &quot;%2B&quot;
  ),
  &quot;Open in SharePoint&quot;,
  &quot;_blank&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SharePoint Path URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SharePoint_Path__c</fullName>
        <formula>Account.SharePoint_Path__c +&quot;/&quot;+&quot;opportunity&quot;+&quot;/&quot;+

IF ( AND (  ISBLANK ( D365OpportunityGuid__c ),  DATEVALUE( CreatedDate ) &gt; DATE ( 2025,3,10 ) ), 
Name + &quot;_&quot; +  Id , 
Name + &quot;_&quot; +  D365OpportunityGuid__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for PDF Butler SharePoint integration to determine path to SharePoint file location.</inlineHelpText>
        <label>SharePoint Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simulate_Annual_Allocation__c</fullName>
        <label>Simulate Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Simulate_Utilized__c</fullName>
        <label>Simulate Utilized</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sites_Powered_By_Solar_Next_2yrs__c</fullName>
        <label>Sites Powered By Solar Next 2yrs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smart_Meter_Count__c</fullName>
        <label>Smart Meter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smart_Meter_Percentage__c</fullName>
        <label>Smart Meter Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Smart_Meters__c</fullName>
        <label>Smart Meters</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Software_Type__c</fullName>
        <label>Software Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Measure</fullName>
                </value>
                <value>
                    <fullName>ECAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar__c</fullName>
        <label>Solar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sq_Footage_served_by_Central_Plant__c</fullName>
        <label>Sq Footage served by Central Plant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street_Traffic_Light_Percentage__c</fullName>
        <label>Street &amp; Traffic Light Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sub_Type__c</fullName>
        <label>Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONV-Renewal</fullName>
                </value>
                <value>
                    <fullName>No Fee +</fullName>
                </value>
                <value>
                    <fullName>Optimize</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <description>Previously Term Months</description>
        <label>Contract Term Months</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Is_Owner__c</fullName>
        <description>Used for Ops Reporting to show &quot;My Opportunities&quot; if Owner.</description>
        <formula>IF ( $User.Id =  Owner.Id  , 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Ops Reporting to show &quot;My Opportunities&quot; if Owner.</inlineHelpText>
        <label>User Is Owner</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_is_Co_Salesperson__c</fullName>
        <description>Used for Ops Reporting to show &quot;My Opportunities&quot; if Co Salesperson.</description>
        <formula>IF ( $User.Id =  Co_Salesperson__r.Id , 1, 0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for Ops Reporting to show &quot;My Opportunities&quot; if Co Salesperson</inlineHelpText>
        <label>User is Co Salesperson</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Utility_Individual_Department_Allocation__c</fullName>
        <label>Utility Individual Department Allocation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visits_Per_Month__c</fullName>
        <label>Visits Per Month</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Water_Sewer__c</fullName>
        <label>Water/Sewer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Water_Treatment_Plants_Y_N__c</fullName>
        <label>Water Treatment Plants (Y/N)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_10_Gross_Savings__c</fullName>
        <defaultValue>(0)</defaultValue>
        <label>Year 10 Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_10_Net_Savings__c</fullName>
        <defaultValue>(0)</defaultValue>
        <label>Year 10 Net Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Gross_Savings__c</fullName>
        <defaultValue>(0)</defaultValue>
        <label>Year 1 Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Net_Savings__c</fullName>
        <defaultValue>(0)</defaultValue>
        <label>Year 1 Net Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Gross_Savings__c</fullName>
        <defaultValue>(0)</defaultValue>
        <label>Year 2 Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Net_Savings__c</fullName>
        <defaultValue>(0)</defaultValue>
        <label>Year 2 Net Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>aiesync__Easy_Sync_Quote_Formula__c</fullName>
        <formula>aiesync__Easy_Sync_Quote__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Easy Sync Quote Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aiesync__Easy_Sync_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Easy Sync Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>aiesync__TestCustomField_O__c</fullName>
        <label>TestCustomField_O</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Account_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>vsa__Account_Plan__c</referenceTo>
        <relationshipLabel>Identified Opportunities</relationshipLabel>
        <relationshipName>Identified_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vsa__Business_Unit_RO__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;&amp;  vsa__Account_Plan__r.vsa__Business_Unit__c ,vsa__Account_Plan__r.vsa__Business_Unit__r.Name)</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Count_of_Mutual_Plans__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This field is populated by a flow and displays the number of Mutual Plans that have been created for this Opportunity</description>
        <label>Count of Mutual Plans</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vsa__Count_of_Opportunity_Assessments_RO__c</fullName>
        <label>Count of Opportunity Assessments</label>
        <summaryForeignKey>vsa__Opportunity_Assessment__c.vsa__Opportunity_OAT__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>vsa__Count_of_Power_Map_Contacts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Counts the number of Power Map Contacts for the Opportunity</description>
        <label>Count of Power Map Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vsa__Count_of_ValuePrompters__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Counts the number of ValuePrompter® records created for the Opportunity</description>
        <label>Count of ValuePrompter® records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vsa__Mutual_Plans_RO__c</fullName>
        <description>This formula field uses the Count of Mutual Plans field to show a clickable icon that can be added to a Dashboard.</description>
        <formula>HYPERLINK(&quot;/lightning/r/&quot;&amp; CASESAFEID(Id) &amp;&quot;/related/vsa__Mutual_Plan_Opportunity__r/view&quot;,



(CASE( vsa__Count_of_Mutual_Plans__c,
0,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__NoMutualPlan&quot;, &quot;No Mutual Plan Exists&quot; , 50, 50)),
1,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__MutualPlan1&quot;, &quot;1 Mutual Plan&quot; , 50, 50)),
2,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__MutualPlan2&quot;, &quot;2 Mutual Plans&quot; , 50, 50)),
3,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__MutualPlan3&quot;, &quot;3 Mutual Plans&quot; , 50, 50)),
4,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__MutualPlan4&quot;, &quot;4 Mutual Plans&quot; , 50, 50)),
5,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__MutualPlan5&quot;, &quot;5 Mutual Plans&quot; , 50, 50)),
(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__MutualPlan6&quot;, &quot;More than 5 Mutual Plans&quot; , 50, 50))
))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mutual Plans</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Plan_Image_RO__c</fullName>
        <formula>if(   vsa__Plan__c  = true, (IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__Plan&quot;, &quot;Plan&quot; , 30, 30)),(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__RedPlan&quot;, &quot;No Plan&quot; , 30, 30)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vsa__PowerMapContacts_List_RO__c</fullName>
        <description>Clickable image to show the number of Power Map Contacts that launches the Opportunity</description>
        <formula>HYPERLINK(&quot;/lightning/r/&quot;&amp; CASESAFEID(Id) &amp;&quot;/view&quot;,
(CASE( vsa__Count_of_Power_Map_Contacts__c,
0,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__NoPowerMapIcon&quot;, &quot;No Power Map&quot; , 50, 50)),
1,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap1&quot;, &quot;1 Power Map Contact&quot; , 50, 50)),
2,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap2&quot;, &quot;2 Power Map Contacts&quot; , 50, 50)),
3,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap3&quot;, &quot;3 Power Map Contacts&quot; , 50, 50)),
4,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap4&quot;, &quot;4 Power Map Contacts&quot; , 50, 50)),
5,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap5&quot;, &quot;5 Power Map Contacts&quot; , 50, 50)),
(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__PowerMap6&quot;, &quot;More than 5 Power Map Contacts&quot; , 50, 50))
))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power Map Contacts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Power_Image_RO__c</fullName>
        <formula>if(  vsa__Power__c  = true, (IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__Power&quot;, &quot;Power&quot; , 30, 30)), (IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__RedPower&quot;, &quot;No Power&quot; , 30, 30)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Power</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Power__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vsa__QP_Formula_RO__c</fullName>
        <formula>IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__X&quot;, &quot;None&quot;,0,0) &amp; &quot; &quot; &amp;

IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__QP&quot;, &quot;Times&quot;,30,34) &amp; &quot; &quot; &amp;


vsa__VisionMatch_Image_RO__c &amp;

IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__X&quot;, &quot;Times&quot;,30,12) &amp; &quot; &quot; &amp;

vsa__Value_Image_RO__c &amp;

IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__X&quot;, &quot;Times&quot;,30,12) &amp; &quot; &quot; &amp;

vsa__Power_Image_RO__c &amp;

IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__X&quot;, &quot;Times&quot;,30,12) &amp; &quot; &quot; &amp;

vsa__Plan_Image_RO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QP Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Reverse_Timeline_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reverse Timeline Template</label>
        <referenceTo>vsa__Reverse_Timeline_Template__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vsa__VSA_Strategy__c</fullName>
        <label>VSA Strategy</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__ValuePrompters_List_RO__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/r/&quot;&amp;  CASESAFEID(Id) &amp;&quot;/related/vsa__ValuePrompter__r/view&quot;,



(CASE(  vsa__Count_of_ValuePrompters__c,
0,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__NoValuePrompterIcon&quot;, &quot;No ValuePrompter®&quot; , 50, 50)),
1,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__ValuePrompters1&quot;, &quot;1 ValuePrompter®&quot; , 50, 50)),
2,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__ValuePrompters2&quot;, &quot;2 ValuePrompters&quot; , 50, 50)),
3,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__ValuePrompters3&quot;, &quot;3 ValuePrompters&quot; , 50, 50)),
4,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__ValuePrompters4&quot;, &quot;4 ValuePrompters&quot; , 50, 50)),
5,(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__ValuePrompters5&quot;, &quot;5 ValuePrompters&quot; , 50, 50)),
(IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__ValuePrompters6&quot;, &quot;More than 5 ValuePrompters&quot; , 50, 50))
))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ValuePrompter®</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Value_Image_RO__c</fullName>
        <formula>if( vsa__Value__c = true, (IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__Value&quot;, &quot;Value&quot; , 30, 30)), (IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__RedValue&quot;, &quot;No Value&quot; , 30, 30)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vsa__VisionMatch_Image_RO__c</fullName>
        <formula>if(  vsa__VisionMatch__c = true, (IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__VMd&quot;, &quot;VisionMatch Differentiated&quot; , 30, 30)), (IMAGE(LEFT($Api.Partner_Server_URL_560, FIND( &apos;/services&apos;,$Api.Partner_Server_URL_560))&amp;&quot;resource/vsa__RedVM&quot;, &quot;No VisionMatch&quot; , 30, 30)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VisionMatch™</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vsa__VisionMatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisionMatch™</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vsa__White_Space_Analysis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>White Space Analysis</label>
        <referenceTo>vsa__White_Space_Analysis__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>